--- a/former/_config.yml
+++ b/former/_config.yml
@@ -14,9 +14,9 @@ keep_files:
 
 
 # Site settings
-title: Jeremy Cohen
+title: Niklas Kugler
 subtitle: "A free HTML5 agency template"
-url: "http://Jeremy26.github.io" # the base hostname & protocol for your site
+url: "http://niklaskugler.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 #baseurl: "/airspace-jekyll"
 cover: "/assets/cover.png"
